syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message ChangePasswordRequest {
  string id = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message ChangePasswordResponse {
  string message = 1;
}
