syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-auth/api/proto/v1";

message ResetPasswordRequest {
  string id = 1;
  string resetCode = 2;
  string newPassword = 3;
}

message ResetPasswordResponse {
  string message = 1;
}
